tests/samples/negative/types/noncopy_match_without_move.ax
module noncopy_match_without_move;

import std.core.result;

noncopy struct Owner {
    value: i32;
}

fn make_owner(value: i32) -> Owner {
    return Owner { value: value };
}

fn consume(owner: Owner) -> i32 {
    return owner.value;
}

fn main() -> i32 {
    let result: Result<Owner, i32> = Result.ok(make_owner(9));
    return match result {
        .ok(owner) => consume(move(owner)),
        .err(code) => code,
    };
}
